--- a/HMS/Web.config
+++ b/HMS/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-HMS-20190504035207.mdf;Initial Catalog=aspnet-HMS-20190504035207;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="HMSConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=HMS_DB; Integrated Security=true"
+      providerName="System.Data.SQLClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
