--- a/HMS/HMS.csproj
+++ b/HMS/HMS.csproj
@@ -281,6 +281,7 @@
     <Content Include="Areas\Dashboard\Views\Roles\_Listing.cshtml" />
     <Content Include="Areas\Dashboard\Views\Roles\_Delete.cshtml" />
     <Content Include="Areas\Dashboard\Views\Roles\_Action.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Users\_UserRoles.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
